# EA-MPC

./: CMakeLists.txt  README.md
include/: nmpc_bluerov2_2D.h  nmpc_bluerov2_2D_main.h
launch/airframes/: bluerov2_2D.xml
solver/: nmpc_common.h  nmpc_integrator.c  nmpc_qpoases_interface.cpp  nmpc_qpoases_interface.hpp  nmpc_solver.c
src/: nmpc_bluerov2_2D.cpp  nmpc_bluerov2_2D_main.cpp
